# QAD3T

./: .gitignore  LICENSE  README  README.md  flake.nix  main.py  pyproject.toml
qad3t/: __init__.py  _main.py  cli.py
